@@ -70,15 +70,15 @@ public class TestNestedVirtualThreads {
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
-            System.out.println(events.get(0));
-            RecordedEvent e = events.get(0);
+            System.out.println(events.getFirst());
+            RecordedEvent e = events.getFirst();
             RecordedThread t = e.getThread();
             Asserts.assertTrue(t.isVirtual());
+            Asserts.assertEquals(t.getOSName(), null);
+            Asserts.assertEquals(t.getOSThreadId(), -1L);
             Asserts.assertEquals(t.getJavaName(), ""); // vthreads default name is the empty string.
-            Asserts.assertEquals(t.getOSName(), "");
-            Asserts.assertEquals(t.getThreadGroup().getName(), "VirtualThreads");
             Asserts.assertGreaterThan(t.getJavaThreadId(), 0L);
-            Asserts.assertEquals(t.getOSThreadId(), 0L);
+            Asserts.assertEquals(t.getThreadGroup().getName(), "VirtualThreads");
         }
     }
 }
